--- a/package.json
+++ b/package.json
@@ -5,11 +5,23 @@
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-icons": "^3.2.2",
+    "react-redux": "^6.0.0",
+    "react-responsive-modal": "^3.5.1",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.1",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.7",
+    "semantic-ui": "^2.4.2",
+    "semantic-ui-react": "^0.84.0"
   },
   "scripts": {
+    "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
+    "start-js": "react-scripts start",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts buid",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
